; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_drawmatrix.c_uiDrawMatrixTransformPoint.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_drawmatrix.c_uiDrawMatrixTransformPoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiDrawMatrixTransformPoint(i32* %0, double* %1, double* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca double*, align 8
  %6 = alloca double*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store double* %1, double** %5, align 8
  store double* %2, double** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @m2c(i32* %8, i32* %7)
  %10 = load double*, double** %5, align 8
  %11 = load double*, double** %6, align 8
  %12 = call i32 @cairo_matrix_transform_point(i32* %7, double* %10, double* %11)
  ret void
}

declare dso_local i32 @m2c(i32*, i32*) #1

declare dso_local i32 @cairo_matrix_transform_point(i32*, double*, double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
